#Nmap Changelog ($Id$); -*-text-*-

o [GH#1147][GH#1108] Reduced LibPCRE resource limits so that version detection
  can't use as much of the stack. Previously Nmap could crash when run on
  low-memory systems against target services which are intentionally or
  accidentally difficult to match. Someone assigned CVE-2018-15173 for this
  issue. [Daniel Miller]

o [NSE] Support for edns-client-subnet (ECS) in dns.lua has been improved by:
  - Using ECS code compliant with RFC 7871 [John Bond]
  - Properly trimming ECS address, as mandated by RFC 7871 [nnposter]
  - Fixing a bug that prevented using the same ECS option table more than
    once [nnposter]

o [Ncat][GH#1267] Fixed communication with commands launched with -e or -c on
  Windows, especially when --ssl is used. [Daniel Miller]

o Upgraded included libpcap to 1.8.1 [Daniel Miller]

o [NSE] Script http-default-accounts was not able to run against more than one
  target host/port. [nnposter]

o [NSE][GH#1251] New script-arg `http.host` allows users to force a particular
  value for the Host header in all HTTP requests.

o [NSE][GH#1258] Use smtp.domain script arg or target's domain name instead of
  "example.com" in EHLO command used for STARTTLS. [gwire]

o [NSE][GH#1233] Fix brute.lua's BruteSocket wrapper, which was crashing Nmap
  with an assertion failure due to socket mixup [Daniel Miller]:
    nmap: nse_nsock.cc:672: int receive_buf(lua_State*, int, lua_KContext): Assertion `lua_gettop(L) == 7' failed.

o [NSE][GH#1254] Handle an error condition in smb-vuln-ms17-010 caused by IPS
  closing the connection. [Clément Notin]

o [NSE] https-redirect detects HTTP servers that redirect to the same port, but
  with HTTPS. Some nginx servers do this, which made ssl-* scripts not run
  properly. [Daniel Miller]

o [NSE][GH#1236] Added broadcast-jenkins-discover to discover Jenkins servers
  on a LAN by sending a discovery broadcast probe. [Brendan Coles]
